--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <p class="ravenchiyazi1">Doğum günün kutlu olsun bu alemde teksin mermiler seksin Tek Kral Biziz. #Anarchy</p>
             <p class="castielbaslik2"> -  Castiel</p>
             <p class="castielyazi2">Doğum günün kutlu olsun borcumu öde #1982</p>
+            <p class="burakbaslik1"> -  Buried</p>
+            <p class="burakyazi1">Doğum günün kutlu olsun sanalcı kolpacı kardeşim gözlerinden öpüyorum. #Anarchy</p>
         </div>
         
        
