--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <p class="castielyazi2">Doğum günün kutlu olsun borcumu öde #1982</p>
             <p class="burakbaslik1"> -  Buried</p>
             <p class="burakyazi1">Doğum günün kutlu olsun sanalcı kolpacı kardeşim gözlerinden öpüyorum. #Anarchy</p>
+            <p class="sladebaslik1"> -  Slade</p>
+            <p class="sladeyazi1">Doğum Günün Kutlu Olsun Bugo</p>
         </div>
         
        
