--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="burakbaslik1"> -  Buried</p>
             <p class="burakyazi1">Doğum günün kutlu olsun sanalcı kolpacı kardeşim gözlerinden öpüyorum. #Anarchy</p>
             <p class="sladebaslik1"> -  Slade</p>
-            <p class="sladeyazi1">Doğum Günün Kutlu Olsun Bugo</p>
+            <p class="sladeyazi1">dgko bugo</p>
         </div>
         
        
