--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Buğra Zengin Namı Değer BugoZengo</title>
+    <title>Namı Değer BugoZengo</title>
     <link rel="icon" href="png/bz.ico">
 </head>
 <body class="body">
