--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p class="cahitbaslik"> -  Cahit</p>
             <p class="cahityazi">Canım kardeşim iyiki doğdun doğum günün kutlu olsun, varlığın daim olsun.</p>
             <p class="ravenchibaslik1"> -  Ravenchi</p>
-            <p class="ravenchiyazi1">Doğum günün kutlu olsun bu alemde teksin mermiler seksin Tek Kral Biziz. #Anarchy</p>
+            <p class="ravenchiyazi1">Doğum günün kutlu olsun mermiler seksin bu alemde teksin  Tek Kral Biziz. #Anarchy</p>
             <p class="castielbaslik2"> -  Castiel</p>
             <p class="castielyazi2">Doğum günün kutlu olsun borcumu öde #1982</p>
             <p class="burakbaslik1"> -  Buried</p>
