--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <p class="burakyazi1">Doğum günün kutlu olsun sanalcı kolpacı kardeşim gözlerinden öpüyorum. #Anarchy</p>
             <p class="sladebaslik1"> -  Slade</p>
             <p class="sladeyazi1">dgko bugo</p>
+            <p class="rakinbaslik1"> -  Rakin</p>
+            <p class="rakinyazi1">dogum gunun kutlu olsun kolpacino kardesim 4 yildir en kolpa adamsin eger olmezsen ilerki dogum gunlerinide kutlariz.</p>
         </div>
         
        
