--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <p class="sladeyazi1">dgko bugo</p>
             <p class="rakinbaslik1"> -  Rakin</p>
             <p class="rakinyazi1">dogum gunun kutlu olsun kolpacino kardesim 4 yildir en kolpa adamsin eger olmezsen ilerki dogum gunlerinide kutlariz.</p>
+            <p class="furkanbaslik1"> -  Furkanxrv</p>
+            <p class="furkanyazi1">iyi ki doğdun bugo en iyi dostum tekirdağa bekliyorum</p>
         </div>
         
        
