--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <p class="rakinyazi1">dogum gunun kutlu olsun kolpacino kardesim 4 yildir en kolpa adamsin eger olmezsen ilerki dogum gunlerinide kutlariz.</p>
             <p class="furkanbaslik1"> -  Furkanxrv</p>
             <p class="furkanyazi1">iyi ki doğdun bugo en iyi dostum tekirdağa bekliyorum</p>
+            <p class="holdredbaslik1"> - Holdred</p>
+            <p class="holdredyazi1">عيد ميلاد سعيد أخي بوغو. الله لا ياخذك منا أبدا. أتمنى لكم سنة مليئة بالنشاط.</p>
         </div>
         
        
