--- a/index2.html
+++ b/index2.html
@@ -13,10 +13,10 @@
     
     <a title="Doğum Günün Kutlu Olsun" class="dgsgeridon" href="index.html">Geri Dön</a>
     <div class="sifrediv"> 
-        <input class="sifre" type="password" placeholder="  Özel Şifre">
-        <p class="ipucu">ipucu</p>
-        <input required class="accept" type="submit" value="Onayla">
-
+        <input id="sifre" class="sifre" type="password" placeholder="  Özel Şifre">
+        <p class="ipucu">Nazlı'n(m)</p>
+        <button onclick="sifreaccept()" id="accept" required class="accept" type="submit" >Onayla<button>
     </div>
+    <script src="script.js" text="javascript"></script>
 </body>
 </html> 
