--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <p class="silverhoodyazi1">Bugo dogum gunun kutlu olsun kanka :) kralından bi crown sana :crown:</p>
             <p class="miabaslik1"> - Mia</p>
             <p class="miayazi1">Ankara Maceralarımızı  Unutma Dostum . Doğum Günün Kutlu olsun Yüceler Yücesi Bugo kardeşim</p>
+            <p class="soulwaxbaslik"> - Soulwax</p>
+            <p class="soulwaxyazi">dogum gunun kutlu olsun iyi ki varsın aslan kardesim nice mutlu beraber senelere mutlu yasların olsun ortak </p>
         </div>
         
        
